--- a/EasyPagesIo/www/index.html
+++ b/EasyPagesIo/www/index.html
@@ -44,6 +44,8 @@
   <script src="app/components/dashboard/dashctrl.js"></script>
   <script src="app/components/service/srvctrl.js"></script>
   <script src="app/components/explore/expctrl.js"></script>
+  <script src="app/services.js"></script>
+  <script src="app/shared/reviewfactory.js"></script>
   <script src="app/components/auth/authctrls.js"></script>
   <script src="app/shared/routes.js"></script>
   <script src="app/services.js"></script>
