Some adjustments adjusted login and registration, routing, a little bit the dash and review posting hope nor conflicts will occur, though it is quite likely

--- a/EasyPagesIo/www/index.html
+++ b/EasyPagesIo/www/index.html
@@ -38,8 +38,33 @@
   <!-- your app's js 
     Put everything in here!
     -->
+
+  <!-- inject:js -->
+  <script src="/app/app.js"></script>
+  <script src="/app/controllers.js"></script>
+  <script src="/app/services.js"></script>
+  <script src="/app/shared/authservice.js"></script>
+  <script src="/app/shared/companyfactory.js"></script>
+  <script src="/app/shared/profilefactory.js"></script>
+  <script src="/app/shared/reviewfactory.js"></script>
+  <script src="/app/shared/routes.js"></script>
+  <script src="/app/shared/servicesfactory.js"></script>
+  <script src="/app/shared/sessionservice.js"></script>
+  <script src="/app/components/account/accctrl.js"></script>
+  <script src="/app/components/auth/authctrls.js"></script>
+  <script src="/app/components/dashboard/dashctrl.js"></script>
+  <script src="/app/components/explore/expctrl.js"></script>
+  <script src="/app/components/review/reviewctrl.js"></script>
+  <script src="/app/components/service/srvctrl.js"></script>
+  <script src="/app/shared/globals/constants.js"></script>
+  <script src="/app/shared/routecontrol/authaccess.js"></script>
+  <script src="/app/components/account/setup/accsetupctrl.js"></script>
+  <script src="/app/components/review/newreview/creatervwctrl.js"></script>
+  <!-- endinject -->
+
+<!--
   <script src="app/app.js"></script>
-  <!-- controllers per feature -->
+   controllers per feature
   <script src="app/controllers.js"></script>
   <script src="app/components/dashboard/dashctrl.js"></script>
   <script src="app/components/service/srvctrl.js"></script>
@@ -51,7 +76,7 @@
   <script src="app/shared/reviewfactory.js"></script>
   <script src="app/components/auth/authctrls.js"></script>
   <script src="app/shared/routes.js"></script>
-  <script src="app/services.js"></script>
+  <script src="app/services.js"></script> -->
 </head>
 
 <body ng-app="starter">
