--- a/EasyPagesIo/www/index.html
+++ b/EasyPagesIo/www/index.html
@@ -34,6 +34,7 @@
   <script src="lib/ionic-rating/ionic-rating.min.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
+  <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
 
   <!-- your app's js 
