--- a/EasyPagesIo/www/index.html
+++ b/EasyPagesIo/www/index.html
@@ -41,29 +41,29 @@
     -->
 
   <!-- inject:js -->
-  <script src="/app/app.js"></script>
-  <script src="/app/controllers.js"></script>
-  <script src="/app/services.js"></script>
-  <script src="/app/shared/accountfactory.js"></script>
-  <script src="/app/shared/authservice.js"></script>
-  <script src="/app/shared/publicAccountService.js"></script>
-  <script src="/app/shared/reviewfactory.js"></script>
-  <script src="/app/shared/routes.js"></script>
-  <script src="/app/shared/servicesfactory.js"></script>
-  <script src="/app/shared/sessionservice.js"></script>
-  <script src="/app/components/auth/authctrls.js"></script>
-  <script src="/app/components/account/accctrl.js"></script>
-  <script src="/app/components/company/companypublic.js"></script>
-  <script src="/app/components/dashboard/dashctrl.js"></script>
-  <script src="/app/components/explore/expctrl.js"></script>
-  <script src="/app/components/profile/profilepublic.js"></script>
-  <script src="/app/components/review/reviewctrl.js"></script>
-  <script src="/app/components/service/srvctrl.js"></script>
-  <script src="/app/shared/globals/constants.js"></script>
-  <script src="/app/shared/routecontrol/authaccess.js"></script>
-  <script src="/app/components/account/setup/accsetupctrl.js"></script>
-  <script src="/app/components/review/newreview/creatervwctrl.js"></script>
-  <script src="/app/components/service/newservice/createsrvctrl.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/controllers.js"></script>
+  <script src="app/services.js"></script>
+  <script src="app/shared/accountfactory.js"></script>
+  <script src="app/shared/authservice.js"></script>
+  <script src="app/shared/publicAccountService.js"></script>
+  <script src="app/shared/reviewfactory.js"></script>
+  <script src="app/shared/routes.js"></script>
+  <script src="app/shared/servicesfactory.js"></script>
+  <script src="app/shared/sessionservice.js"></script>
+  <script src="app/components/auth/authctrls.js"></script>
+  <script src="app/components/account/accctrl.js"></script>
+  <script src="app/components/company/companypublic.js"></script>
+  <script src="app/components/dashboard/dashctrl.js"></script>
+  <script src="app/components/explore/expctrl.js"></script>
+  <script src="app/components/profile/profilepublic.js"></script>
+  <script src="app/components/review/reviewctrl.js"></script>
+  <script src="app/components/service/srvctrl.js"></script>
+  <script src="app/shared/globals/constants.js"></script>
+  <script src="app/shared/routecontrol/authaccess.js"></script>
+  <script src="app/components/account/setup/accsetupctrl.js"></script>
+  <script src="app/components/review/newreview/creatervwctrl.js"></script>
+  <script src="app/components/service/newservice/createsrvctrl.js"></script>
   <!-- endinject -->
 
 <!--
